k8s-argocd-lab/manifests/pod-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-sa
  namespace: demo

spec:
  serviceAccountName: app-sa #pod test-sa sử dụng service account app-sa để giao tiếp với Kubernetes API

  containers:
  - name: frontend
    image: nginx

    command:
    - sleep
    - "3600"
