k8s-argocd-lab/manifests/rollouts.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: frontend-rollout
  namespace: k8s-lab1

spec:
  replicas: 5

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: nginx:1.29

  strategy:
    canary:

      steps:

      - setWeight: 10

      - pause:
          duration: 30s

      - setWeight: 50

      - pause:
          duration: 30s

      - setWeight: 100
