k8s-argocd-lab/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: k8s-lab1
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: k8s-lab1
spec:
  selector:
    app: backend
  ports:
  - port: 5678
    targetPort: 5678
  type: ClusterIP
